fixed customer request swagger.json file
